elements + gradient buttons

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </section>
-                      
+
         <!-- resume -->
         <section class="container">
             <div class="row">
@@ -118,9 +118,12 @@
                         Tem pora odit laborum iure inventore possimus
                         laboriosam qui nam. Fugit!
                     </p>
-                    <div class="btn">Learn more</div>
-                    <div class="play-btn">
-                        <a href="https://www.youtube.com/watch?v=2PFVhej26BE">P</a>
+                    <div class="btn-res">
+                        <a href="#" >Learn more</a>
+                    </div>
+
+                    <div class="btn-play">
+                        <a href="https://www.youtube.com/watch?v=2PFVhej26BE" rel="noreferrer noopener" class="fa fa-play-circle-o"></a>
                     </div>
                 </div>
                 <img src="./img/resume-logo.png" alt="resume-img" class="col-12 col-lg-6" />
