--- a/index.html
+++ b/index.html
@@ -370,9 +370,33 @@
                             <h2>Contact With Us</h2>
                         </div>
                     </div>
-                    <div class="contacts-details">
-                        <img src="./img/map.png" alt="map">
-                        <h3>Visit Us</h3>
+                    <div class="contacts-address">
+                        <div class="image-box">
+                            <img src="./img/map.png" alt="map">
+                        </div>
+                        <div class="address">
+                            <h3>Visit Us</h3>
+                            <p>530 Old BUffalo Street Northwest #205 New York</p>
+
+                        </div>
+                    </div>
+                    <div class="contacts-address">
+                        <div class="image-box">
+                            <img src="./img/phone.png" alt="phone">
+                        </div>
+                        <div class="address">
+                            <h3>Visit Us</h3>
+                            <p>530 Old BUffalo Street Northwest #205 New York</p>
+                        </div>
+                    </div>
+                    <div class="contacts-address">
+                        <div class="image-box">
+                            <img src="./img/email.png" alt="letter">
+                        </div>
+                        <div class="address">
+                            <a href="mailto:info@yourwebsite.com" class="contact">info@yourwebsite.com</a>
+                            <a href="#" target="_blank" rel="noreferrer noopener">www.yourwebsite.com</a>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-7 col-xl-8">
