#42 CSS variables change and font-awesome icon

--- a/index.html
+++ b/index.html
@@ -275,7 +275,13 @@
                         </div>
                     </div>
                     <h3>data generated</h3>
-                    <div>elementas</div>
+                    <div>
+                        <div>
+                            <div></div>
+                        </div>
+                        <i class="fa fa-location-arrow arrow"></i>
+                    </div>
+                    
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
