--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
                         <div class="animation-circle">
-                            <div class="dot-circle">
-                                <div class="circle">
+                            <div class="dashed-circle">
+                                <div class="smaller-circle">
                                     <img src="./img/work-section/work1.png" alt="how we works image" />
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                     </div>
                     <h3>data generated</h3>
                     <div>
-                        <div>
+                        <div class="small-dashed-circle">
                             <div></div>
                         </div>
                         <i class="fa fa-location-arrow arrow"></i>
@@ -286,8 +286,8 @@
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
                         <div class="animation-circle">
-                            <div class="dot-circle">
-                                <div class="circle">
+                            <div class="dashed-circle">
+                                <div class="smaller-circle">
                                     <img src="./img/work-section/work2.png" alt="how we works image" />
                                 </div>
                             </div>
@@ -299,8 +299,8 @@
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
                         <div class="animation-circle">
-                            <div class="dot-circle">
-                                <div class="circle">
+                            <div class="dashed-circle">
+                                <div class="smaller-circle">
                                     <img src="./img/work-section/work3.png" alt="how we works image" />
                                 </div>
                             </div>
@@ -312,8 +312,8 @@
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
                         <div class="animation-circle">
-                            <div class="dot-circle">
-                                <div class="circle">
+                            <div class="dashed-circle">
+                                <div class="smaller-circle">
                                     <img src="./img/work-section/work4.png" alt="how we works image" />
                                 </div>
                             </div>
