--- a/index.html
+++ b/index.html
@@ -275,12 +275,7 @@
                         </div>
                     </div>
                     <h3>data generated</h3>
-                    <div>
-                        <div class="small-dashed-circle">
-                            <div></div>
-                        </div>
-                        <i class="fa fa-location-arrow arrow"></i>
-                    </div>
+                    
                     
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 works-column">
@@ -294,7 +289,6 @@
                         </div>
                     </div>
                     <h3>data stored</h3>
-                    <div>elementas</div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
@@ -307,7 +301,6 @@
                         </div>
                     </div>
                     <h3>data processing</h3>
-                    <div>elementas</div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 works-column">
                     <div class="circle-container">
@@ -320,8 +313,27 @@
                         </div>
                     </div>
                     <h3>actionable insights</h3>
-                    <div>elementas</div>
                 </div>
+            </div>
+            <div class="row flex-box">
+                    <div class="small-dashed-circle flex-box">
+                        <div class="small-circle"></div>
+                    </div>
+                    <i class="fa fa-location-arrow arrow"></i>
+                    <div class="dashed-line"></div>
+                    <div class="small-dashed-circle flex-box">
+                        <div class="small-circle"></div>
+                    </div>
+                    <i class="fa fa-location-arrow arrow"></i>
+                    <div class="dashed-line"></div>
+                    <div class="small-dashed-circle flex-box">
+                        <div class="small-circle"></div>
+                    </div>
+                    <i class="fa fa-location-arrow arrow"></i>
+                    <div class="dashed-line"></div>
+                    <div class="small-dashed-circle flex-box">
+                        <div class="small-circle"></div>
+                    </div>
             </div>
         </section>
 
